fix: redo commit because wrong previous merge - remove width 100% - user-mention nowrap to keep full name - add package npm-run-all for windows compatibility - wrong https://github.com/Sanofi-IADC/konviw/actions/runs/2141817572
resolves WEB-76

--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -145,6 +145,7 @@ a.user-mention {
   border-radius: 15px;
   color: var(--font-color);
   font-size: var(--user-mention-size);
+  white-space: nowrap;
   &:hover {
     color: white;
   }
